Atualizações de funções e continuação da func 3

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "arquivos.h": "c",
         "utils.h": "c",
         "funcionalidades.h": "c",
-        "prints_e_erros.h": "c"
+        "prints_e_erros.h": "c",
+        "indices.h": "c"
     }
 }
