um pequeno passo pra *, um grande salto pra tree

--- a/entrada.in
+++ b/entrada.in
@@ -1,2 +1,1 @@
-9 binario5.bin idCrime inteiro indice5.bin 1
-2 lugarCrime "SAO PAULO" idCrime 564
+8 crimeunico.bin idCrime inteiro indiceUnico.bin
